sharing: Fix crash when run against older NM

When run against an older version of NetworkManager,
nm_active_connection_get_connection_type() will return NULL as the
library supports the function, but the property doesn't exist in the
daemon.

Consider the sharing to be offline if the version of NetworkManager is
too old.

https://bugzilla.gnome.org/show_bug.cgi?id=732479